--- a/views/config.env
+++ b/views/config.env
@@ -1,2 +1,2 @@
 PORT = 3000;
-MONGO_URI = mongodb+srv://admin:<password>@cluster0.slls4mw.mongodb.net/users?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://admin:admin12345@cluster0.slls4mw.mongodb.net/users?retryWrites=true&w=majority
